menu (2.1.33) unstable; urgency=low

  * The "not yet released" release
  * Menu translations
    - Portuguese updated by Miguel Figueiredo. Closes: #399241
    - Malayalam added by Praveen. Closes: #402016
    - Tamil added by Tirumurti Vasudevan.

 -- Christian Perrier <bubulle@debian.org>  Sun, 19 Nov 2006 08:14:55 +0100

menu (2.1.32) unstable; urgency=medium

  * The "maintainer on strike" release
  * Medium urgency for i18n only upload.
  * This release was prepared by Christian Perrier.
  * Menu translations
    - Bengali added by Jamil Ahmed
    - Gujarati added by Kartik Mistry
    - Albanian added by Elian Myftiu. Closes: #394702
    - Macedonian added by Georgi Stanojevski. Closes: #396033
    - Bosnian added by Safir Secerovic.
      Closes: #396403, #396432, #396651, #397326
    - Hindi added by Guntupalli Karunakar (still 4u)
  * Programs translations
    - Vietnamese updated by Clytie Siddal. Closes: #393622

 -- Bill Allombert <ballombe@debian.org>  Sat, 11 Nov 2006 18:36:22 +0100

menu (2.1.31) unstable; urgency=medium

  * The "it is not dead, it's sleeping" release.
  * Medium urgency for i18n and documentation fix only upload.
  * menufile.5, menufile.fr.5:
    - section WindowManagers was mispelled.
  * Program translations: (Thanks Christian Perrier for processing them).
    - French update by Jean-Luc Coulon. Closes: #344434
    - Russian update by Yuri Kozlov. Closes: #386789
    - Swedish update by Daniel Nylander. Closes: #386701
    - Thai update by Theppitak Karoonboonyanan. Closes: #386921
    - Czech update by Miroslav Kure. Closes: #387343
    - Vietnamese update by Clytie Siddall. Closes: #387577
  * Menu translations
    - Slovak update by Peter Mann.
    - Wolof translation by Mouhamadou Mamoune Mbacke.
    - Kurdish translation by Erdal Ronahi. Closes: #387763, 387764
    - Korean translation by Sunjae Park. Closes: #391335

 -- Bill Allombert <ballombe@debian.org>  Wed, 11 Oct 2006 01:17:24 +0200
